; ModuleID = '/home/carl/AnghaBench/libgit2/src/extr_refdb_fs.c_create_new_reflog_file.c'
source_filename = "/home/carl/AnghaBench/libgit2/src/extr_refdb_fs.c_create_new_reflog_file.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@GIT_REFLOG_DIR_MODE = common dso_local global i32 0, align 4
@O_WRONLY = common dso_local global i32 0, align 4
@O_CREAT = common dso_local global i32 0, align 4
@GIT_REFLOG_FILE_MODE = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i8*)* @create_new_reflog_file to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @create_new_reflog_file(i8* %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i8*, align 8
  %4 = alloca i32, align 4
  %5 = alloca i32, align 4
  store i8* %0, i8** %3, align 8
  %6 = load i8*, i8** %3, align 8
  %7 = load i32, i32* @GIT_REFLOG_DIR_MODE, align 4
  %8 = call i32 @git_futils_mkpath2file(i8* %6, i32 %7)
  store i32 %8, i32* %5, align 4
  %9 = icmp slt i32 %8, 0
  br i1 %9, label %10, label %12

10:                                               ; preds = %1
  %11 = load i32, i32* %5, align 4
  store i32 %11, i32* %2, align 4
  br label %24

12:                                               ; preds = %1
  %13 = load i8*, i8** %3, align 8
  %14 = load i32, i32* @O_WRONLY, align 4
  %15 = load i32, i32* @O_CREAT, align 4
  %16 = or i32 %14, %15
  %17 = load i32, i32* @GIT_REFLOG_FILE_MODE, align 4
  %18 = call i32 @p_open(i8* %13, i32 %16, i32 %17)
  store i32 %18, i32* %4, align 4
  %19 = icmp slt i32 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %12
  store i32 -1, i32* %2, align 4
  br label %24

21:                                               ; preds = %12
  %22 = load i32, i32* %4, align 4
  %23 = call i32 @p_close(i32 %22)
  store i32 %23, i32* %2, align 4
  br label %24

24:                                               ; preds = %21, %20, %10
  %25 = load i32, i32* %2, align 4
  ret i32 %25
}

declare dso_local i32 @git_futils_mkpath2file(i8*, i32) #1

declare dso_local i32 @p_open(i8*, i32, i32) #1

declare dso_local i32 @p_close(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
